# fastAPI_trial

./: .gitignore  pyproject.toml
fastapi/: main.py
project/: main.py
project/blog/: database.py  main.py  models.py
