[tool.poetry]
name = "fastApiProject"
version = "0.1.0"
description = ""
authors = ["Zhengguo MacbookPro <zhengguo.gu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
